CDOC-131: replaced SmartIdClient with Cdoc2RpClient, performing SID RpV3 authentication via cdoc2-rp-server